--- a/clinica SPRING boot/demo/src/main/resources/application.properties
+++ b/clinica SPRING boot/demo/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/Clinica
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+#usuario y contraseña para poder acceder a endpoints
+spring.security.user.name=root
+spring.security.user.password=1234
 # JPA (Para que cree las tablas automáticamente)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
