--- a/clinica SPRING boot/demo/src/main/resources/application.properties
+++ b/clinica SPRING boot/demo/src/main/resources/application.properties
@@ -6,6 +6,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #usuario y contraseña para poder acceder a endpoints
 spring.security.user.name=root
 spring.security.user.password=1234
+#para que la API sea accesible externamente
+server.address=0.0.0.0
+# Permite servir archivos estáticos desde la carpeta 'imagenes'
+spring.web.resources.static-locations=file:/C:/Users/david/Desktop/2DAM/PROYECTO-CFGS/Proyecto - Codigo/imagenesMascotas/
+#aumentar el tamaño de los archivos que se pueden subir
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
 # JPA (Para que cree las tablas automáticamente)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
