--- a/clinica_app/pubspec.yaml
+++ b/clinica_app/pubspec.yaml
@@ -10,7 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   table_calendar: ^3.0.8
-  http: ^1.0.0
+  image_picker: ^1.0.7
+  http: ^1.2.1
+  shared_preferences: ^2.2.2 # O la última versión disponible
 
 dev_dependencies:
   flutter_test:
