filtros y listado de productos funcionando perfectamente

--- a/clinica SPRING boot/demo/src/main/resources/application.properties
+++ b/clinica SPRING boot/demo/src/main/resources/application.properties
@@ -8,8 +8,10 @@ spring.security.user.name=root
 spring.security.user.password=1234
 #para que la API sea accesible externamente
 server.address=0.0.0.0
-# Permite servir archivos estáticos desde la carpeta 'imagenes'
-spring.web.resources.static-locations=file:/C:/Users/david/Desktop/2DAM/PROYECTO-CFGS/Proyecto - Codigo/imagenesMascotas/
+# Permite servir archivos estáticos desde las carpetas 'imagenesMascotas' e imagenesProductos
+spring.web.resources.static-locations=file:/C:/Users/david/Desktop/2DAM/PROYECTO-CFGS/Proyecto - Codigo/imagenesMascotas/,file:./imagenesProductos/
+
+
 #aumentar el tamaño de los archivos que se pueden subir
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
