--- a/clinica_app/android/app/src/main/AndroidManifest.xml
+++ b/clinica_app/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/><!--Habilitar peticiones http en release-->
     <application
         android:label="clinica_app"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:networkSecurityConfig="@xml/network_security_config"><!--Archivo de configuración para que pueda acceder a peticiones http-->
         <activity
             android:name=".MainActivity"
             android:exported="true"
