--- a/clinica SPRING boot/demo/src/main/resources/application.properties
+++ b/clinica SPRING boot/demo/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#Gestión BBDD
 spring.application.name=demo
 spring.datasource.url=jdbc:mysql://localhost:3306/Clinica
 spring.datasource.username=root
